# Enterprise_Rag

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-frontend.txt  requirements.txt
config/: settings.py
config/guardrails/: config.yml  flows.co  prompts.yml
docker/: Dockerfile.api  Dockerfile.frontend  prometheus.yml
frontend/: app.py
scripts/: cli.py
src/: orchestrator.py
src/api/: main.py
src/generation/: rag_pipeline.py
src/ingestion/: chunker.py  loaders.py  vector_store.py
src/observability/: evaluator.py  tracking.py
src/retrieval/: hybrid_retriever.py  reranker.py
src/security/: __init__.py  guardrails.py
src/utils/: cache.py  sanitizer.py
tests/: test_core.py  test_sanitizer.py
