[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
    "tqdm>=4.68.1",
    "unstructured>=0.22.31",
    "uvicorn[standard]>=0.49.0",
    "websockets>=15.0.1",
]
